MAPR-HIVE-747 : Remove PrintGCTimeStamps option since it is not supported in Java 11